--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>My Reads</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Hello world!</div>
   </body>
 </html>
